# graduation_design

./: README.md  课程设计报告.doc
1.系统工程/: ~$统规格说明书.docx  毕业设计（短学期初稿）-----云相册.xmind  系统规格说明书.docx
2.需求工程/: 云相册管家功能描述.xmind  需求文档.docx
3.设计工程/: ImagePath.h  User.h  UserMessageManage.h  graduation_design.vpp  graduation_design.vpp.bak_000f  graduation_design.vpp.bak_001d  graduation_design.vpp.bak_002d  graduation_design.vpp.bak_003d  graduation_design.vpp.bak_004d  graduation_design.vpp.bak_005d  graduation_design.vpp.bak_006d  graduation_design.vpp.bak_007d  graduation_design.vpp.bak_008d  graduation_design.vpp.bak_009d  graduation_design.vpp.bak_010d  graduation_design.vpp.bak_011d  graduation_design.vpp.bak_012d  graduation_design.vpp.bak_013d  graduation_design.vpp.bak_014d  graduation_design.vpp.bak_015d  graduation_design.vpp.bak_016d  graduation_design.vpp.bak_017d  graduation_design.vpp.bak_018d  graduation_design.vpp.bak_019d  graduation_design.vpp.bak_020d  graduation_design.vpp.bak_021d  graduation_design.vpp.bak_022d  graduation_design.vpp.bak_023d  graduation_design.vpp.bak_024d  graduation_design.vpp.bak_025d  graduation_design.vpp.bak_026d  graduation_design.vpp.bak_027d  graduation_design.vpp.bak_028d  graduation_design.vpp.bak_029d  graduationdesign_fk.ddl  (+4 more)
4.编码/C++/: CMakeLists.txt
4.编码/C++/src/: dbpool.cpp  dbpool.h  dealhttpmsg.hpp  graduation_2.pro  graduation_2.pro.user.4.10-pre1  graph.pbtxt  headers.h  httpserver.cpp  httpserver.h  imagebasetool.cpp  imagebasetool.h  imagepath.cpp  imagepath.h  json.cpp  json.hpp  log.cpp  log.h  main.cpp  objectdetection.cpp  objectdetection.h  pay.cpp  pay.h  sqlquery.cpp  sqlquery.h  user.cpp  user.h  usermanage.cpp.autosave  usermanage.h.autosave  usermanageinterface.cpp  usermanageinterface.h  zjynamespace.h
4.编码/C++/src/人脸识别Model/: face_dect.py
(+176 files in other folders)
